# allprompt

./: .gitignore  Dockerfile  Info.plist  LICENSE  LLM Prompt Helper.spec  LLMPromptHelper.entitlements  LLM_Prompt_Helper_macOS.spec  MANIFEST.in  PACKAGE-README.md  PACKAGING.md  README.md  llm-prompt-helper.spec  requirements.txt  setup.cfg  setup.py
.cursor/rules/: rules.mdc
assets/: AppIcon.icns
dmg_source/allprompt.app/Contents/: Info.plist
dmg_source/allprompt.app/Contents/Frameworks/tiktoken/: __init__.py  __pycache__  _educational.py  core.py  load.py  model.py  py.typed  registry.py
dmg_source/allprompt.app/Contents/Resources/: Info.plist
dmg_source/allprompt.app/Contents/_CodeSignature/: CodeResources
memory-bank/: add.md  architecture.md  implementation-plan.md  progress.md  tech-stack.md
src/: __init__.py  add.md  main.py
src/core/: __init__.py  constants.py  file_scanner.py  filter.py  output_formatter.py  sort_utils.py  tokenizer.py
src/gui/: __init__.py  action_controller.py  add.md  constants.py  controllers.py  custom_widgets.py  main_window.py  panels.py  settings_dialog.py  token_controller.py
src/gui/resources/: compile_resources.py  resources.py  resources.qrc
src/gui/resources/styles/: style.qss
src/utils/: __init__.py  clipboard_utils.py  settings_manager.py
