[metadata]
name = llm-prompt-helper
version = attr: src.__version__
description = LLM 프롬프트에 사용할 코드 스니펫을 쉽게 생성하는 데스크톱 애플리케이션
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/llm-prompt-helper
author = LLM Prompt Helper Team
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    PySide6>=6.5.0
    tiktoken>=0.5.1
    pathspec>=0.11.0
    pyperclip>=1.8.2
    requests>=2.31.0
    packaging>=23.0
    appdirs>=1.4.4

[options.packages.find]
exclude =
    venv*
    memory-bank*
    .cursor*

[options.entry_points]
console_scripts =
    llm-prompt-helper = src.main:main

[options.package_data]
* = *.ui 